VSE BoolProperties toggle when assigned False #51947

Closed
opened 2017-07-01 14:59:33 +02:00 by Bikebot · 4 comments

System Information
Operating system and graphics card
Windows 10, ATI Mobility Radeon HD 4500 Series

Blender Version
Broken: 2.78c

Short description of error
Assigning False to ImageSequence.use_translation or .use_crop toggles between True and False

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Create an Image strip in the VSE and type N
  2. Execute in console:

X=C.selected_editable_sequences[0]
X.use_proxy
False

X.use_proxy=False
X.use_proxy
True

X.use_proxy=False
X.use_proxy
False

X.use_proxy=False
X.use_proxy
True

system-info.txt

property toggle bug.blend

The same problem occurs with .use_crop or .use_proxy
The problem does NOT occur with e.g. with RenderSettings.use_antialiasing

P.S. Blender crashes when I open die attached .blend file.

**System Information** Operating system and graphics card Windows 10, ATI Mobility Radeon HD 4500 Series **Blender Version** Broken: 2.78c **Short description of error** Assigning False to ImageSequence.use_translation or .use_crop toggles between True and False **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Create an Image strip in the VSE and type N 2. Execute in console: > >>> X=C.selected_editable_sequences[0] > >>> X.use_proxy >False > > >>> X.use_proxy=False > >>> X.use_proxy >True > > >>> X.use_proxy=False > >>> X.use_proxy >False > > >>> X.use_proxy=False > >>> X.use_proxy >True [system-info.txt](https://archive.blender.org/developer/F648704/system-info.txt) [property toggle bug.blend](https://archive.blender.org/developer/F648705/property_toggle_bug.blend) The same problem occurs with .use_crop or .use_proxy The problem does NOT occur with e.g. with RenderSettings.use_antialiasing P.S. Blender crashes when I open die attached .blend file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bikebot

Added subscriber: @bikebot

This issue was referenced by 79f27fc8d3

This issue was referenced by 79f27fc8d3396e3d2c9a204be08a9d97c75aab63

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51947
No description provided.