Fix T51947: failure setting sequence.use_proxy/crop/translation to False